<resources>
    <string name="app_name">OMarket</string>

    /// MainActivity
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sell">Sell</string>

    ///  MyProductActivity ////////////////
    <string name="my_product">My Product</string>
    <string name="my_product_error_text">Sign in to see your products</string>

    /// SignUpActivity ////////////////////
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mail">Email</string>
    <string name="phone">Phone</string>
    <string name="create_acc">Create Account</string>
    <string name="dont_have_acc">Don\'t have account, Click Here!</string>

    /// SellActivity ///////////////////
    <string name="sell_category">Choose Category</string>

    //// Other /////////////////////////////////////
    <string-array name="product_categories">
        <item>Electronic</item>
        <item>equipment and Tools</item>
        <item>Motor and Car</item>
        <item>Home and Land</item>
        <item>Real Estate</item>
        <item>Jewellery</item>
        <item>Children and Kit</item>
        <item>Decoration</item>
    </string-array>

    <string-array name="currencies">
        <item>USD</item>
        <item>RIEL</item>
    </string-array>

    <string-array name="locations">
        <item>Banteaymeanchey</item>
        <item>Battambang</item>
        <item>Kampong Chnang</item>
        <item>Kampong Cham</item>
        <item>Kampong Spue</item>
        <item>Kampong Thum</item>
        <item>Kampot</item>
        <item>Kandal</item>
        <item>Kep</item>
        <item>Koh Kong</item>
        <item>Kratie</item>
        <item>Mundol Kiri</item>
        <item>Oudor Meanchey</item>
        <item>Pailen</item>
        <item>Phnom Penh</item>
        <item>Preah Vihear</item>
        <item>Preah Sihaknu</item>
        <item>Prey Veng</item>
        <item>Pursat</item>
        <item>Ratanak Kiri</item>
        <item>Siem Reap</item>
        <item>Stoeng Traeng</item>
        <item>Svay Reang</item>
        <item>Takeo</item>
        <item>Tbong Kmum</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
