<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <LinearLayout
        android:id="@+id/su_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="28dp"
        android:paddingBottom="36dp"
        android:paddingRight="28dp">

        <!--<TextView-->
            <!--android:id="@+id/su_txt_title"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:paddingBottom="12dp"-->
            <!--android:paddingTop="24dp"-->
            <!--android:text="@string/sign_up"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="24sp"-->
            <!--android:textStyle="bold" />-->

        <ImageView
            android:id="@+id/SUivProfile"
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:src="@drawable/user_profile"
            android:layout_height="120dp"
            android:background="@drawable/circle_bg"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/su_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/su2_edt_username"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edt_style"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/su_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/su2_edt_phone"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edt_style"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/su_layout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/su_edt_mail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edt_style"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:paddingLeft="12dp"
                android:maxLines="1"
                android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/su_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/su_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edt_style"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/su_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/su_edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edt_style"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/su_btn_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_style"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/su_txt_already_have_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/dont_have_acc"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>