<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/su2_layout"
        android:paddingLeft="28dp"
        android:paddingBottom="36dp"
        android:paddingRight="28dp">

    <ImageView
        android:id="@+id/SUivProfile"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:src="@drawable/user_profile"
        android:layout_height="120dp"
        android:background="@drawable/circle_bg"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/su_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/su2_edt_username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edt_style"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/su_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/su2_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edt_style"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/su2_btn_create_acc"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/create_acc"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="@drawable/button_style" />

    </LinearLayout>

</ScrollView>
